base-kv: 1. abort all pending mutations after range restored from snapshot 2. simplify KVRangeWAL flush logic